@@ -6,4 +6,4 @@ else
   SEP=":"
 fi
 
-java -cp "lib/*${SEP}bin_user" rocky.app.RockyMain
+java -Xmx4G -Xms2G -XX:+UseG1GC -XX:MaxGCPauseMillis=10 -Dsun.java2d.metal=true -Dapple.awt.graphics.UseQuartz=true --enable-native-access=ALL-UNNAMED -cp "lib/*${SEP}bin_user" rocky.app.RockyMain
